@@ -46,21 +46,6 @@ uses
     { Guild Data - Basic Data }
     procedure PD_Delete_Guilds(tg : TGuild);
 
-    { Guild Data - Member Data }
-
-    { Guild Data - Position Data }
-
-    { Guild Data - Skills Data }
-    procedure PD_Save_Guilds_Skills(forced : Boolean = False);
-
-    { Guild Data - Ban List Data }
-    procedure PD_Save_Guilds_BanList(forced : Boolean = False);
-
-    { Guild Data - Diplomacy Data }
-    procedure PD_Save_Guilds_Diplomacy(forced : Boolean = False);
-
-    procedure PD_Save_Guilds_Storage(forced : Boolean = False);
-
 
     { Castle Data - Basic Data }
     procedure PD_Save_Castles(forced : Boolean = False);
@@ -119,11 +104,6 @@ uses
         PD_Save_Pets_Parse(forced);
         PD_Save_Parties_Parse(forced);
         PD_Save_Guilds_Parse(forced);
-
-        PD_Save_Guilds_Skills(forced);
-        PD_Save_Guilds_BanList(forced);
-        PD_Save_Guilds_Diplomacy(forced);
-        PD_Save_Guilds_Storage(forced);
 
         PD_Save_Castles(forced);
 
@@ -279,373 +259,6 @@ uses
 
         DataSave();
     end;
-
-
-    { -------------------------------------------------------------------------------- }
-    { -- Guild Data - Skills Data ---------------------------------------------------- }
-    { -------------------------------------------------------------------------------- }
-    procedure PD_Save_Guilds_Skills(forced : Boolean = False);
-    var
-    	datafile : TStringList;
-        tg : TGuild;
-    	i, j, k : Integer;
-        str : String;
-        len : Integer;
-        saveflag : Boolean;
-    begin
-    	saveflag := False;
-    	datafile := TStringList.Create;
-
-    	for i := 0 to GuildList.Count - 1 do begin
-        	tg := GuildList.Objects[i] as TGuild;
-
-            if (tg = nil) then Continue;
-            if tg.RegUsers = 0 then Continue;
-
-            for j := 0 to tg.RegUsers - 1 do begin
-            	if tg.MemberID[j] = 0 then Break;
-                if not assigned(tg.Member[i]) then Break;
-                if (tg.Member[j].Login <> 0) or (forced) then saveflag := True;
-                Break;
-            end;
-
-            if not saveflag then Continue;
-
-        	datafile.Clear;
-            datafile.Add(' SK ID : LV : SKILL NAME');
-            datafile.Add('-------------------------------');
-
-            for j := 10000 to 10004 do begin
-            	if tg.GSkill[j].LV = 0 then Continue;
-
-                str := ' ';
-                str := str + IntToStr(j);
-                str := str + ' : ';
-
-                len := length(IntToStr(tg.GSkill[j].LV));
-                for k := 0 to (2 - len) - 1 do begin
-                	str := str + ' ';
-                end;
-                str := str + IntToStr(tg.GSkill[j].LV);
-                str := str + ' : ';
-
-                str := str + tg.GSkill[j].Data.IDC;
-
-                datafile.Add(str);
-            end;
-
-            CreateDir(AppPath + 'gamedata\Guilds');
-            CreateDir(AppPath + 'gamedata\Guilds\' + IntToStr(tg.ID));
-
-            try
-                datafile.SaveToFile(AppPath + 'gamedata\Guilds\' + IntToStr(tg.ID) + '\Skills.txt');
-                //debugout.Lines.Add(tg.Name + ' guild skill data saved.');
-            except
-                DebugOut.Lines.Add('Guild skill data could not be saved.');
-            end;
-        end;
-
-        datafile.Clear;
-        datafile.Free;
-    end;
-
-
-    { -------------------------------------------------------------------------------- }
-    { -- Guild Data - Ban List Data -------------------------------------------------- }
-    { -------------------------------------------------------------------------------- }
-    procedure PD_Save_Guilds_BanList(forced : Boolean = False);
-    var
-    	datafile : TStringList;
-        tg : TGuild;
-        tgb : TGBan;
-    	i, j, k : Integer;
-        str : String;
-        len : Integer;
-        saveflag : Boolean;
-    begin
-    	saveflag := False;
-    	datafile := TStringList.Create;
-
-    	for i := 0 to GuildList.Count - 1 do begin
-        	tg := GuildList.Objects[i] as TGuild;
-
-            if (tg = nil) then Continue;
-            if tg.RegUsers = 0 then Continue;
-
-            for j := 0 to tg.RegUsers - 1 do begin
-            	if tg.MemberID[j] = 0 then Break;
-                if not assigned(tg.Member[i]) then Break;
-                if (tg.Member[j].Login <> 0) or (forced) then saveflag := True;
-                Break;
-            end;
-
-            if not saveflag then Continue;
-
-        	datafile.Clear;
-            datafile.Add(' CHARACTER NAME          : ACCOUNT NAME            : BAN REASON');
-            datafile.Add('------------------------------------------------------------------------------------------------------');
-
-            for j := 0 to tg.GuildBanList.Count - 1 do begin
-            	tgb := tg.GuildBanList.Objects[j] as TGBan;
-
-                if (tgb = nil) then Continue;
-
-                str := ' ';
-
-                str := str + tgb.Name;
-                len := length(tgb.Name);
-                for k := 0 to (23 - len) - 1 do begin
-                	str := str + ' ';
-                end;
-                str := str + ' : ';
-
-                str := str + tgb.AccName;
-                len := length(tgb.AccName);
-                for k := 0 to (23 - len) - 1 do begin
-                	str := str + ' ';
-                end;
-                str := str + ' : ';
-
-                str := str + tgb.Reason;
-
-                datafile.Add(str);
-            end;
-
-            CreateDir(AppPath + 'gamedata\Guilds');
-            CreateDir(AppPath + 'gamedata\Guilds\' + IntToStr(tg.ID));
-
-            try
-                datafile.SaveToFile(AppPath + 'gamedata\Guilds\' + IntToStr(tg.ID) + '\BanList.txt');
-                //debugout.Lines.Add(tg.Name + ' guild banlist data saved.');
-            except
-                DebugOut.Lines.Add('Guild banlist data could not be saved.');
-            end;
-        end;
-
-        datafile.Clear;
-        datafile.Free;
-    end;
-
-
-    { -------------------------------------------------------------------------------- }
-    { -- Guild Data - Diplomacy Data ------------------------------------------------- }
-    { -------------------------------------------------------------------------------- }
-    procedure PD_Save_Guilds_Diplomacy(forced : Boolean = False);
-    var
-    	datafile : TStringList;
-        tg : TGuild;
-        tgl : TGRel;
-    	i, j, k : Integer;
-        str : String;
-        len : Integer;
-        saveflag : Boolean;
-    begin
-    	saveflag := False;
-    	datafile := TStringList.Create;
-
-    	for i := 0 to GuildList.Count - 1 do begin
-        	tg := GuildList.Objects[i] as TGuild;
-
-            if (tg = nil) then Continue;
-            if tg.RegUsers = 0 then Continue;
-
-            for j := 0 to tg.RegUsers - 1 do begin
-            	if tg.MemberID[j] = 0 then Break;
-                if not assigned(tg.Member[i]) then Break;
-                if (tg.Member[j].Login <> 0) or (forced) then saveflag := True;
-                Break;
-            end;
-
-            if not saveflag then Continue;
-
-        	datafile.Clear;
-            datafile.Add(' GID    : T : GUILD NAME');
-            datafile.Add('-----------------------------------------------------');
-
-            for j := 0 to tg.RelAlliance.Count - 1 do begin
-            	tgl := tg.RelAlliance.Objects[j] as TGRel;
-
-                if (tgl = nil) then Continue;
-
-                str := ' ';
-
-                len := length(IntToStr(tgl.ID));
-                for k := 0 to (6 - len) - 1 do begin
-                	str := str + ' ';
-                end;
-                str := str + IntToStr(tgl.ID);
-                str := str + ' : ';
-
-                str := str + 'A';
-                str := str + ' : ';
-
-                str := str + tgl.GuildName;
-
-                datafile.Add(str);
-            end;
-
-            for j := 0 to tg.RelHostility.Count - 1 do begin
-            	tgl := tg.RelHostility.Objects[j] as TGRel;
-
-                if (tgl = nil) then Continue;
-
-                str := ' ';
-
-                len := length(IntToStr(tgl.ID));
-                for k := 0 to (6 - len) - 1 do begin
-                	str := str + ' ';
-                end;
-                str := str + IntToStr(tgl.ID);
-                str := str + ' : ';
-
-                str := str + 'H';
-                str := str + ' : ';
-
-                str := str + tgl.GuildName;
-
-                datafile.Add(str);
-            end;
-
-            CreateDir(AppPath + 'gamedata\Guilds');
-            CreateDir(AppPath + 'gamedata\Guilds\' + IntToStr(tg.ID));
-
-            try
-                datafile.SaveToFile(AppPath + 'gamedata\Guilds\' + IntToStr(tg.ID) + '\Diplomacy.txt');
-                //debugout.Lines.Add(tg.Name + ' guild diplomacy data saved.');
-            except
-                DebugOut.Lines.Add('Guild diplomacy data could not be saved.');
-            end;
-        end;
-
-        datafile.Clear;
-        datafile.Free;
-    end;
-
-
-
-    procedure PD_Save_Guilds_Storage(forced : Boolean = False);
-    var
-    	datafile : TStringList;
-        tg : TGuild;
-        tgl : TGRel;
-    	i, j, k : Integer;
-        str : String;
-        len : Integer;
-        saveflag : Boolean;
-    begin
-    	saveflag := False;
-    	datafile := TStringList.Create;
-
-    	for i := 0 to GuildList.Count - 1 do begin
-        	tg := GuildList.Objects[i] as TGuild;
-
-            if (tg = nil) then Continue;
-            if tg.RegUsers = 0 then Continue;
-
-            for j := 0 to tg.RegUsers - 1 do begin
-            	if tg.MemberID[j] = 0 then Break;
-                if not assigned(tg.Member[i]) then Break;
-                if (tg.Member[j].Login <> 0) or (forced) then saveflag := True;
-                Break;
-            end;
-
-            if not saveflag then Continue;
-
-            datafile.Clear;
-            datafile.Add('    ID :   AMT : EQP : I :  R : A : CARD1 : CARD2 : CARD3 : CARD4 : NAME');
-            datafile.Add('---------------------------------------------------------------------------------------------------------');
-
-
-
-            for j := 1 to 100 do begin
-    	        if tg.Storage.Item[j].ID <> 0 then begin
-	            	str := ' ';
-
-					len := length(IntToStr(tg.Storage.Item[j].ID));
-	                for k := 0 to (5 - len) - 1 do begin
-            	    	str := str + ' ';
-        	        end;
-    	            str := str + IntToStr(tg.Storage.Item[j].ID);
-	                str := str + ' : ';
-
-	                len := length(IntToStr(tg.Storage.Item[j].Amount));
-                	for k := 0 to (5 - len) - 1 do begin
-            	    	str := str + ' ';
-        	        end;
-    	            str := str + IntToStr(tg.Storage.Item[j].Amount);
-	                str := str + ' : ';
-
-	                len := length(IntToStr(tg.Storage.Item[j].Equip));
-                	for k := 0 to (3 - len) - 1 do begin
-            	    	str := str + ' ';
-        	        end;
-            	    str := str + IntToStr(tg.Storage.Item[j].Equip);
-        	        str := str + ' : ';
-
-    	            str := str + IntToStr(tg.Storage.Item[j].Identify);
-	                str := str + ' : ';
-
-            	    len := length(IntToStr(tg.Storage.Item[j].Refine));
-        	        for k := 0 to (2 - len) - 1 do begin
-    	            	str := str + ' ';
-	                end;
-            	    str := str + IntToStr(tg.Storage.Item[j].Refine);
-        	        str := str + ' : ';
-    	            str := str + IntToStr(tg.Storage.Item[j].Attr);
-	                str := str + ' : ';
-
-    	            len := length(IntToStr(tg.Storage.Item[j].Card[0]));
-	                for k := 0 to (5 - len) - 1 do begin
-            	    	str := str + ' ';
-        	        end;
-    	            str := str + IntToStr(tg.Storage.Item[j].Card[0]);
-	                str := str + ' : ';
-
-    	            len := length(IntToStr(tg.Storage.Item[j].Card[1]));
-	                for k := 0 to (5 - len) - 1 do begin
-            	    	str := str + ' ';
-        	        end;
-    	            str := str + IntToStr(tg.Storage.Item[j].Card[1]);
-	                str := str + ' : ';
-
-    	            len := length(IntToStr(tg.Storage.Item[j].Card[2]));
-	                for k := 0 to (5 - len) - 1 do begin
-            	    	str := str + ' ';
-        	        end;
-    	            str := str + IntToStr(tg.Storage.Item[j].Card[2]);
-	                str := str + ' : ';
-
-        	        len := length(IntToStr(tg.Storage.Item[j].Card[3]));
-    	            for k := 0 to (5 - len) - 1 do begin
-	                	str := str + ' ';
-                	end;
-            	    str := str + IntToStr(tg.Storage.Item[j].Card[3]);
-        	        str := str + ' : ';
-
-                    str := str + tg.Storage.Item[j].Data.Name;
-
-    	            datafile.Add(str);
-	            end;
-            end;
-
-
-
-            CreateDir(AppPath + 'gamedata\Guilds');
-            CreateDir(AppPath + 'gamedata\Guilds\' + IntToStr(tg.ID));
-
-            try
-                datafile.SaveToFile(AppPath + 'gamedata\Guilds\' + IntToStr(tg.ID) + '\Storage.txt');
-                //debugout.Lines.Add(tg.Name + ' guild diplomacy data saved.');
-            except
-                DebugOut.Lines.Add('Guild storage data could not be saved.');
-            end;
-        end;
-
-        datafile.Clear;
-        datafile.Free;
-    end;
-
-
 
 
     { -------------------------------------------------------------------------------- }
